fixed equity calculations bug and some minor alignment issues

--- a/static/styles.css
+++ b/static/styles.css
@@ -513,6 +513,14 @@
     border-radius: 10px;
 }
 
+@media only screen and (max-width: 650px) {
+    /** link on holdings item*/
+    .index-body__holdings a {
+        height: 72px;
+        padding: 5px 20px;
+    }
+}
+
 /** link on holdings item state */
 .index-body__holdings a:link {
     text-decoration: none;
@@ -613,12 +621,26 @@
     grid-row: 1 / 3;
 }
 
+@media only screen and (max-width: 650px) {
+    /** position for symb **/
+    .hitem__each--symb {
+        font-size: 23px;
+    }
+}
+
 /** position for cp **/
 .hitem__each--cp {
     justify-content: center;
     font-size: 17px;
     grid-column: 3 / 4;
     grid-row: 1 / 2;
+}
+
+@media only screen and (max-width: 650px) {
+    /** position for cp **/
+    .hitem__each--cp {
+        font-size: 15px;
+    }
 }
 
 /** position for quantity **/
@@ -629,12 +651,26 @@
     grid-row: 2 / 3;
 }
 
+@media only screen and (max-width: 650px) {
+    /** position for quantity **/
+    .hitem__each--quantity {
+        font-size: 11px;
+    }
+}
+
 /** position for dailypnl **/
 .hitem__each--dailypnl {
     justify-content: center;
     font-size: 14px;
     grid-column: 4 / 5;
     grid-row: 1 / 2;
+}
+
+@media only screen and (max-width: 650px) {
+    /** position for dailypnl **/
+    .hitem__each--dailypnl {
+        font-size: 12px;
+    }
 }
 
 /** position for marketvalue **/
@@ -645,12 +681,26 @@
     grid-row: 1 / 2;
 }
 
+@media only screen and (max-width: 650px) {
+    /** position for marketvalue **/
+    .hitem__each--value {
+        font-size: 18px;
+    }
+}
+
 /** position for pnl **/
 .hitem__each--pnl {
     justify-content: flex-end;
     font-size: 16px;
     grid-column: 6 / 7;
     grid-row: 2 / 3;
+}
+
+@media only screen and (max-width: 650px) {
+    /** position for pnl **/
+    .hitem__each--pnl {
+        font-size: 14px;
+    }
 }
 
 /** position for pnl **/
@@ -700,19 +750,19 @@
 /** position for cashtxt **/
 .sitem__each--cashtext {
     grid-column: 2 / 3;
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
 }
 
 /** position for cashunit **/
 .sitem__each--cashunit {
     grid-column: 3 / 4;
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
 }
 
 /** position for cash **/
 .sitem__each--cash {
     grid-column: 4 / 5;
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
     font-size: 16px;
     justify-content: flex-end;
 }
@@ -720,19 +770,19 @@
 /** position for cashtxt **/
 .sitem__each--returntext {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
 }
 
 /** position for cashunit **/
 .sitem__each--returnunit {
     grid-column: 3 / 4;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
 }
 
 /** position for cash **/
 .sitem__each--return {
     grid-column: 4 / 5;
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
     font-size: 16px;
     justify-content: flex-end;
 }
@@ -1311,8 +1361,8 @@
     border-color: var(--lightblue);
     border-radius: 8px;
     height: 50px;
-    width: 140px;
-    font-size: 18px;
+    width: 150px;
+    font-size: 16px;
     color: var(--lightblue);
 }
 
@@ -1356,7 +1406,7 @@
 .buysellbutton-container__buttons--buy{
     border-style: none;
     color: white;
-
+    width: 120px;
     background-color: var(--buttongreen);
 }
 
@@ -1369,7 +1419,7 @@
 .buysellbutton-container__buttons--sell{
     border-style: none;
     color: white;
-
+    width: 120px;
     background-color: var(--buttonorange);
 }
 
@@ -1382,7 +1432,7 @@
 .buysellbutton-container__buttons--close{
     border-style: none;
     color: white;
-
+    width: 120px;
     background-color: var(--grey);
 }
 
@@ -1702,6 +1752,8 @@
 /** heading */
 .landing-container__form h2{
     padding-top: 35px;
+    margin-bottom: 8px;
+    margin-top: 8px;
 }
 
 /** show hide pw */
